allure-pytest/Linux-canary-Py3.9-parallel/data/attachments/c2323c52c753718a.txt
  File "f2_bad.py", line 1
    I am a bad file that should not pass compileall.
      ^
SyntaxError: invalid syntax

